--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ hr {
     padding: 0rem 0.5rem;
 }
 
+.link-image {
+    max-width: 40px;
+}
+
 /* navigation */
 
 .navigation {
@@ -87,8 +91,7 @@ hr {
 /* headers */
 
 .hero {
-    padding: 2rem;
-    padding-top: 3rem;
+    padding: 3rem 0rem 1rem 0rem;
 }
 
 .hero .hero-img {
